@@ -19,8 +19,11 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
+import java.util.Scanner;
 
 import ml.shifu.guagua.GuaguaConstants;
+import ml.shifu.guagua.mapreduce.GuaguaMapReduceClient;
 import ml.shifu.guagua.mapreduce.GuaguaMapReduceConstants;
 import ml.shifu.shifu.container.obj.ColumnConfig;
 import ml.shifu.shifu.container.obj.ModelBasicConf.RunMode;
@@ -29,8 +32,14 @@ import ml.shifu.shifu.core.AbstractTrainer;
 import ml.shifu.shifu.core.VariableSelector;
 import ml.shifu.shifu.core.alg.NNTrainer;
 import ml.shifu.shifu.core.dtrain.NNConstants;
+import ml.shifu.shifu.core.dvarsel.VarSelMaster;
+import ml.shifu.shifu.core.dvarsel.VarSelMasterResult;
+import ml.shifu.shifu.core.dvarsel.VarSelOutput;
+import ml.shifu.shifu.core.dvarsel.VarSelWorker;
+import ml.shifu.shifu.core.dvarsel.VarSelWorkerResult;
+import ml.shifu.shifu.core.dvarsel.wrapper.WrapperMasterConductor;
+import ml.shifu.shifu.core.dvarsel.wrapper.WrapperWorkerConductor;
 import ml.shifu.shifu.core.validator.ModelInspector.ModelStep;
-import ml.shifu.shifu.core.varselect.Constants;
 import ml.shifu.shifu.core.varselect.VarSelectMapper;
 import ml.shifu.shifu.core.varselect.VarSelectReducer;
 import ml.shifu.shifu.exception.ShifuErrorCode;
@@ -38,11 +47,13 @@ import ml.shifu.shifu.exception.ShifuException;
 import ml.shifu.shifu.fs.PathFinder;
 import ml.shifu.shifu.fs.ShifuFileUtils;
 import ml.shifu.shifu.util.CommonUtils;
+import ml.shifu.shifu.util.Constants;
 import ml.shifu.shifu.util.Environment;
 
 import org.apache.commons.collections.ListUtils;
 import org.apache.commons.compress.compressors.bzip2.BZip2CompressorInputStream;
 import org.apache.commons.io.IOUtils;
+import org.apache.commons.jexl2.JexlException;
 import org.apache.commons.lang.StringUtils;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.Path;
@@ -77,8 +88,10 @@ public class VarSelectModelProcessor extends BasicModelProcessor implements Proc
 
     private final static Logger log = LoggerFactory.getLogger(VarSelectModelProcessor.class);
 
+    public static final String SHIFU_DEFAULT_DTRAIN_PARALLEL = "true";
+
     /**
-     * run for the variable selection
+     * Run for the variable selection
      */
     @Override
     public int run() throws Exception {
@@ -86,11 +99,12 @@ public class VarSelectModelProcessor extends BasicModelProcessor implements Proc
 
         validateNormalize();
 
-        CommonUtils.updateColumnConfigFlags(modelConfig, columnConfigList);
-
         VariableSelector selector = new VariableSelector(this.modelConfig, this.columnConfigList);
 
         if(!modelConfig.getVarSelectWrapperEnabled()) {
+            // Selelct by local KS, IV
+            CommonUtils.updateColumnConfigFlags(modelConfig, columnConfigList);
+
             this.columnConfigList = selector.selectByFilter();
             try {
                 this.saveColumnConfigList();
@@ -98,19 +112,26 @@ public class VarSelectModelProcessor extends BasicModelProcessor implements Proc
                 throw new ShifuException(ShifuErrorCode.ERROR_WRITE_COLCONFIG, e);
             }
         } else {
-            // SE means sensitivity
+            // wrapper method
             if(super.getModelConfig().getDataSet().getSource() == SourceType.HDFS
                     && super.getModelConfig().getBasic().getRunMode() == RunMode.mapred) {
-                validateDistributedWrapperVarSelect();
-                syncDataToHdfs(super.modelConfig.getDataSet().getSource());
-                distributedWrapper(selector);
+                if(Constants.WRAPPER_BY_SE.equalsIgnoreCase(modelConfig.getVarSelect().getWrapperBy())
+                        || Constants.WRAPPER_BY_REMOVE.equalsIgnoreCase(modelConfig.getVarSelect().getWrapperBy())) {
+                    // SE method supports remove and sensitivity se so far
+                    validateDistributedWrapperVarSelect();
+                    syncDataToHdfs(super.modelConfig.getDataSet().getSource());
+                    distributedSEWrapper();
+                } else if(Constants.WRAPPER_BY_VOTED.equalsIgnoreCase(modelConfig.getVarSelect().getWrapperBy())) {
+                    votedVariablesSelection();
+                }
             } else {
+                // local wrapper mode: old
                 wrapper(selector);
             }
         }
-        log.info("Step Finished: varselect");
 
         clearUp(ModelStep.VARSELECT);
+        log.info("Step Finished: varselect");
         return 0;
     }
 
@@ -145,6 +166,174 @@ public class VarSelectModelProcessor extends BasicModelProcessor implements Proc
         }
     }
 
+    private void votedVariablesSelection() throws ClassNotFoundException, IOException, InterruptedException {
+        log.info("Start voted variables selection ");
+        // sync data back to hdfs
+        super.syncDataToHdfs(modelConfig.getDataSet().getSource());
+
+        SourceType sourceType = super.getModelConfig().getDataSet().getSource();
+
+        final List<String> args = new ArrayList<String>();
+        // prepare parameter
+        prepareVarSelParams(args, sourceType);
+
+        Path columnIdsPath = getVotedSelectionPath(sourceType);
+        args.add(String.format(NNConstants.MAPREDUCE_PARAM_FORMAT,
+                ml.shifu.shifu.util.Constants.VAR_SEL_COLUMN_IDS_OUPUT, columnIdsPath.toString()));
+
+        long start = System.currentTimeMillis();
+
+        GuaguaMapReduceClient guaguaClient = new GuaguaMapReduceClient();
+
+        guaguaClient.creatJob(args.toArray(new String[0])).waitForCompletion(true);
+
+        log.info("Voted variables selection finished in {}ms.", System.currentTimeMillis() - start);
+
+        persistColumnIds(columnIdsPath);
+        super.syncDataToHdfs(sourceType);
+    }
+
+    private int persistColumnIds(Path path) {
+        try {
+            List<Scanner> scanners = ShifuFileUtils.getDataScanners(path.toString(), modelConfig.getDataSet()
+                    .getSource());
+
+            List<Integer> ids = null;
+            for(Scanner scanner: scanners) {
+                while(scanner.hasNextLine()) {
+                    String[] raw = scanner.nextLine().trim().split("\\|");
+
+                    @SuppressWarnings("unused")
+                    int idSize = Integer.valueOf(raw[0]);
+
+                    ids = CommonUtils.stringToIntegerList(raw[1]);
+
+                }
+            }
+
+            // prevent multiply running setting
+            for(ColumnConfig config: columnConfigList) {
+                if(!config.isForceSelect()) {
+                    config.setFinalSelect(Boolean.FALSE);
+                }
+            }
+
+            for(Integer id: ids) {
+                this.columnConfigList.get(id).setFinalSelect(Boolean.TRUE);
+            }
+
+            super.saveColumnConfigList();
+
+        } catch (IOException e) {
+            e.printStackTrace();
+            return -1;
+        } catch (IllegalArgumentException e) {
+            e.printStackTrace();
+            return -1;
+        }
+
+        return 0;
+    }
+
+    private Path getVotedSelectionPath(SourceType sourceType) {
+        return ShifuFileUtils.getFileSystemBySourceType(sourceType).makeQualified(
+                new Path(getPathFinder().getVarSelsPath(sourceType), "VarSels"));
+    }
+
+    private void prepareVarSelParams(final List<String> args, final SourceType sourceType) {
+        args.add("-libjars");
+
+        args.add(addRuntimeJars());
+
+        args.add("-i");
+        args.add(ShifuFileUtils.getFileSystemBySourceType(sourceType)
+                .makeQualified(new Path(modelConfig.getDataSetRawPath())).toString());
+
+        String zkServers = Environment.getProperty(Environment.ZOO_KEEPER_SERVERS);
+        if(StringUtils.isEmpty(zkServers)) {
+            log.warn("No specified zookeeper settings from zookeeperServers in shifuConfig file, Guagua will set embeded zookeeper server in client process. For big data applications, specified zookeeper servers are strongly recommended.");
+        } else {
+            args.add("-z");
+            args.add(zkServers);
+        }
+
+        // setting the class
+        args.add("-w");
+        args.add(VarSelWorker.class.getName());
+
+        args.add("-m");
+        args.add(VarSelMaster.class.getName());
+
+        args.add("-c");
+        // the reason to add 1 is that the first iteration in D-NN implementation is used for training preparation.
+        // FIXME, how to set iteration number
+        int expectVarCount = this.modelConfig.getVarSelectFilterNum();
+        int forceSelectCount = 0;
+        int candidateCount = 0;
+        for(ColumnConfig columnConfig: columnConfigList) {
+            if(columnConfig.isForceSelect()) {
+                forceSelectCount++;
+            }
+            if(CommonUtils.isGoodCandidate(columnConfig)) {
+                candidateCount++;
+            }
+        }
+
+        args.add(String.valueOf(Math.min(expectVarCount, candidateCount) - forceSelectCount + 1));
+
+        args.add("-mr");
+        args.add(VarSelMasterResult.class.getName());
+
+        args.add("-wr");
+        args.add(VarSelWorkerResult.class.getName());
+
+        // setting conductor
+        args.add(String.format(NNConstants.MAPREDUCE_PARAM_FORMAT,
+                ml.shifu.shifu.util.Constants.VAR_SEL_MASTER_CONDUCTOR,
+                Environment.getProperty(Environment.VAR_SEL_MASTER_CONDUCTOR, WrapperMasterConductor.class.getName())));
+
+        args.add(String.format(NNConstants.MAPREDUCE_PARAM_FORMAT,
+                ml.shifu.shifu.util.Constants.VAR_SEL_WORKER_CONDUCTOR,
+                Environment.getProperty(Environment.VAR_SEL_MASTER_CONDUCTOR, WrapperWorkerConductor.class.getName())));
+
+        // setting queue
+        args.add(String.format(NNConstants.MAPREDUCE_PARAM_FORMAT, NNConstants.MAPRED_JOB_QUEUE_NAME,
+                Environment.getProperty(Environment.HADOOP_JOB_QUEUE, ml.shifu.shifu.util.Constants.DEFAULT_JOB_QUEUE)));
+
+        args.add(String.format(NNConstants.MAPREDUCE_PARAM_FORMAT, GuaguaConstants.GUAGUA_MASTER_INTERCEPTERS,
+                VarSelOutput.class.getName()));
+
+        // setting model config column config
+        args.add(String.format(
+                NNConstants.MAPREDUCE_PARAM_FORMAT,
+                NNConstants.SHIFU_NN_MODEL_CONFIG,
+                ShifuFileUtils.getFileSystemBySourceType(sourceType).makeQualified(
+                        new Path(super.getPathFinder().getModelConfigPath(sourceType)))));
+        args.add(String.format(
+                NNConstants.MAPREDUCE_PARAM_FORMAT,
+                NNConstants.SHIFU_NN_COLUMN_CONFIG,
+                ShifuFileUtils.getFileSystemBySourceType(sourceType).makeQualified(
+                        new Path(super.getPathFinder().getColumnConfigPath(sourceType)))));
+
+        // source type
+        args.add(String.format(NNConstants.MAPREDUCE_PARAM_FORMAT, NNConstants.NN_MODELSET_SOURCE_TYPE, sourceType));
+
+        // computation time
+        args.add(String.format(NNConstants.MAPREDUCE_PARAM_FORMAT, GuaguaConstants.GUAGUA_COMPUTATION_TIME_THRESHOLD,
+                60 * 60 * 1000l));
+        setHeapSizeAndSplitSize(args);
+
+        // one can set guagua conf in shifuconfig
+        for(Map.Entry<Object, Object> entry: Environment.getProperties().entrySet()) {
+            if(entry.getKey().toString().startsWith("nn") || entry.getKey().toString().startsWith("guagua")
+                    || entry.getKey().toString().startsWith("mapred")) {
+                args.add(String.format(NNConstants.MAPREDUCE_PARAM_FORMAT, entry.getKey().toString(), entry.getValue()
+                        .toString()));
+            }
+        }
+    }
+
+    // GuaguaOptionsParser doesn't to support *.jar currently.
     private String addRuntimeJars() {
         List<String> jars = new ArrayList<String>(16);
         // jackson-databind-*.jar
@@ -174,13 +363,15 @@ public class VarSelectModelProcessor extends BasicModelProcessor implements Proc
         // zookeeper-*.jar
         jars.add(JarManager.findContainingJar(ZooKeeper.class));
 
+        jars.add(JarManager.findContainingJar(JexlException.class));
+
         return StringUtils.join(jars, NNConstants.LIB_JAR_SEPARATOR);
     }
 
     /**
      * Wrapper through {@link TrainModelProcessor} and a MapReduce job to analyze biggest sensitivity MSE.
      */
-    private void distributedWrapper(VariableSelector selector) throws Exception {
+    private void distributedSEWrapper() throws Exception {
         // 1. Train a model using current selected variables, if no variables selected, use all candidate variables.
         TrainModelProcessor trainModelProcessor = new TrainModelProcessor();
         trainModelProcessor.setForVarSelect(true);
@@ -280,6 +471,19 @@ public class VarSelectModelProcessor extends BasicModelProcessor implements Proc
             this.saveColumnConfigList();
             this.syncDataToHdfs(this.modelConfig.getDataSet().getSource());
         }
+
+    }
+
+    private void setHeapSizeAndSplitSize(final List<String> args) {
+        // args.add(String.format(NNConstants.MAPREDUCE_PARAM_FORMAT, GuaguaMapReduceConstants.MAPRED_CHILD_JAVA_OPTS,
+        // "-Xmn128m -Xms1G -Xmx1G -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps"));
+        args.add(String.format(NNConstants.MAPREDUCE_PARAM_FORMAT, GuaguaMapReduceConstants.MAPRED_CHILD_JAVA_OPTS,
+                "-Xmn128m -Xms1G -Xmx1G"));
+        args.add(String.format(NNConstants.MAPREDUCE_PARAM_FORMAT, GuaguaConstants.GUAGUA_SPLIT_COMBINABLE,
+                Environment.getProperty(GuaguaConstants.GUAGUA_SPLIT_COMBINABLE, SHIFU_DEFAULT_DTRAIN_PARALLEL)));
+        args.add(String.format(NNConstants.MAPREDUCE_PARAM_FORMAT,
+                GuaguaConstants.GUAGUA_SPLIT_MAX_COMBINED_SPLIT_SIZE,
+                Environment.getProperty(GuaguaConstants.GUAGUA_SPLIT_MAX_COMBINED_SPLIT_SIZE, "268435456")));
     }
 
     /**
@@ -289,10 +493,8 @@ public class VarSelectModelProcessor extends BasicModelProcessor implements Proc
      * @throws Exception
      */
     private void wrapper(VariableSelector selector) throws Exception {
-
         NormalizeModelProcessor n = new NormalizeModelProcessor();
 
-        // runNormalize();
         n.run();
 
         TrainModelProcessor t = new TrainModelProcessor(false, false);
